--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: talkative
-description: "A new Flutter project."
+description: "Talkative - The most advanced and secure chat application that revolutionizes communication with cutting-edge features, end-to-end encryption, AI integration, and seamless user experience."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -7,92 +7,134 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI & Design
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  lottie: ^3.1.2
+  shimmer: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+  
+  # Firebase & Backend
   firebase_core: ^3.15.1
-  provider: ^6.1.5
-  intl: ^0.20.2
-  cached_network_image: ^3.4.1
-  open_file: ^3.5.10
-  file_picker: ^10.2.0
+  firebase_auth: ^5.6.2
   cloud_firestore: ^5.6.11
   firebase_storage: ^12.4.9
-  firebase_auth: ^5.6.2
+  firebase_messaging: ^15.2.1
+  firebase_analytics: ^11.2.1
+  firebase_crashlytics: ^4.2.2
+  google_sign_in: ^6.2.1
+  
+  # State Management
+  provider: ^6.1.5
+  riverpod: ^2.5.1
+  flutter_riverpod: ^2.5.1
+  
+  # Networking & API
+  http: ^1.2.2
+  dio: ^5.6.0
+  connectivity_plus: ^6.1.0
+  
+  # Media & Files
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
+  open_file: ^3.5.10
+  video_player: ^2.9.2
+  audio_waveforms: ^1.1.0
+  record: ^5.1.2
+  audioplayers: ^6.1.0
+  camera: ^0.11.0+2
+  
+  # Utils & Helpers
+  intl: ^0.20.2
+  uuid: ^4.5.0
+  share_plus: ^10.1.1
+  url_launcher: ^6.3.1
+  path_provider: ^2.1.4
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.2
+  package_info_plus: ^8.0.2
+  
+  # Security & Encryption
+  crypto: ^3.0.5
+  encrypt: ^5.0.3
+  
+  # Local Storage
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.3.2
+  
+  # UI Components
+  flutter_slidable: ^3.1.1
+  pull_to_refresh: ^2.0.0
+  flutter_chat_ui: ^1.6.15
+  emoji_picker_flutter: ^3.0.0
+  flutter_mentions: 2.0.1
+  
+  # Date & Time
+  timeago: ^3.7.0
+  
+  # QR Code
+  qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
+  
+  # Biometric Authentication
+  local_auth: ^2.3.0
+  
+  # Location Services
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  
+  # Theme & Dark Mode
+  dynamic_color: ^1.7.0
+  
+  # Notifications
+  flutter_local_notifications: ^18.0.1
+  
+  # WebSocket & Real-time
+  socket_io_client: ^3.0.1
+  
+  # Image Processing
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.8
+  hive_generator: ^2.0.1
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  
+  # Add custom fonts
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+  
+  # Add assets
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/animations/
+    - assets/sounds/
