--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,108 +16,68 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # UI & Design
-  cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  flutter_svg: ^2.0.10+1
-  lottie: ^3.1.2
-  shimmer: ^3.0.0
-  flutter_staggered_animations: ^1.1.1
   
-  # Firebase & Backend
-  firebase_core: ^3.15.1
-  firebase_auth: ^5.6.2
-  cloud_firestore: ^5.6.11
-  firebase_storage: ^12.4.9
-  firebase_messaging: ^15.2.1
-  firebase_analytics: ^11.2.1
-  firebase_crashlytics: ^4.2.2
-  google_sign_in: ^6.2.1
+  # Core packages
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  firebase_firestore: ^4.13.6
+  firebase_storage: ^11.5.6
+  firebase_messaging: ^14.7.10
+  cloud_firestore: ^4.13.6
   
-  # State Management
-  provider: ^6.1.5
-  riverpod: ^2.5.1
-  flutter_riverpod: ^2.5.1
+  # State management
+  flutter_riverpod: ^2.4.9
   
-  # Networking & API
-  http: ^1.2.2
-  dio: ^5.6.0
-  connectivity_plus: ^6.1.0
+  # UI packages
+  cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
+  dynamic_color: ^1.6.8
+  flutter_svg: ^2.0.9
+  lottie: ^2.7.0
+  cached_network_image: ^3.3.0
   
-  # Media & Files
-  cached_network_image: ^3.4.1
-  image_picker: ^1.1.2
-  file_picker: ^8.1.2
-  open_file: ^3.5.10
-  video_player: ^2.9.2
-  audio_waveforms: ^1.1.0
-  record: ^5.1.2
-  audioplayers: ^6.1.0
-  camera: ^0.11.0+2
-  
-  # Utils & Helpers
-  intl: ^0.20.2
-  uuid: ^4.5.0
-  share_plus: ^10.1.1
-  url_launcher: ^6.3.1
-  path_provider: ^2.1.4
-  permission_handler: ^11.3.1
-  device_info_plus: ^10.1.2
-  package_info_plus: ^8.0.2
-  
-  # Security & Encryption
-  crypto: ^3.0.5
-  encrypt: ^5.0.3
-  
-  # Local Storage
+  # Utility packages
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  shared_preferences: ^2.3.2
+  path_provider: ^2.1.1
+  permission_handler: ^11.1.0
   
-  # UI Components
-  flutter_slidable: ^3.1.1
-  pull_to_refresh: ^2.0.0
-  flutter_chat_ui: ^1.6.15
-  emoji_picker_flutter: ^3.0.0
-  flutter_mentions: 2.0.1
+  # Media packages
+  image_picker: ^1.0.4
+  file_picker: ^6.1.1
+  audioplayers: ^5.2.1
+  camera: ^0.10.5+5
   
-  # Date & Time
-  timeago: ^3.7.0
+  # QR Code packages
+  ai_barcode_scanner: ^5.1.1  # Modern scanner
+  qr_flutter: ^4.1.0          # QR code generator
   
-  # QR Code
-  qr_flutter: ^4.1.0
-  qr_code_scanner: ^1.0.1
+  # Communication packages
+  url_launcher: ^6.2.1
+  share_plus: ^7.2.1
   
-  # Biometric Authentication
-  local_auth: ^2.3.0
+  # Other packages
+  intl: ^0.18.1
+  uuid: ^4.2.1
+  emoji_picker_flutter: ^1.6.4
+  flutter_contacts: ^1.1.7+1
+  connectivity_plus: ^5.0.1
+  device_info_plus: ^9.1.1
+  package_info_plus: ^4.2.0
+  flutter_local_notifications: ^16.2.0
   
-  # Location Services
-  geolocator: ^13.0.1
-  geocoding: ^3.0.0
-  
-  # Theme & Dark Mode
-  dynamic_color: ^1.7.0
-  
-  # Notifications
-  flutter_local_notifications: ^18.0.1
-  
-  # WebSocket & Real-time
-  socket_io_client: ^3.0.1
-  
-  # Image Processing
-  image: ^4.2.0
+  # Development packages
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  flutter_lints: ^3.0.1
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
   integration_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.4.8
-  hive_generator: ^2.0.1
-  json_annotation: ^4.9.0
-  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
